Edited based on feedback of Assignment 2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </nav>
     <img style="float:left; border:5px solid white" src="img/head-shot.jpg" alt="My head shot" width="150">
     <section style="clear:both">
-      <h2><br />About</h2>
+      <br />
+      <h2>About</h2>
       <article>
         <h3>TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt<br />
            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco<br />
