--- a/contact-me.html
+++ b/contact-me.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Portfolio</title>
+    <title>contact-me</title>
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
-  <body style="background-color:rgba(34,125,170,1); font-family:verdana">
-    <header style="text-align:center">
-      <h1 style="font-size:70px">Portfolio</h1>
+  <body>
+    <header>
       <h2>Gedion Birhane</h2>
     </header>
-    <nav style="text-align:center">
+    <nav>
         <a href="index.html">Home</a> |
         <a href="https://www.resume.com/">resume</a>
     </nav>
-    <p style="text-align:center">425-622-####</p>
+    <p id="contacts">Phone: 425-622-#### <br /> Email: gedion.sami@gmail.com</p>
   </body>
 </html>
