--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Portfolio</title>
+      <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
   </head>
-  <body style="background-color:rgba(34,125,170,1); font-family:verdana">
-    <header style="text-align:center">
-      <h1 style="font-size:70px">Portfolio</h1>
+  <body>
+    <header>
+      <h1>Portfolio</h1>
       <h2>Gedion Birhane</h2>
     </header>
-    <nav style="clear:both; text-align:center">
+    <nav>
         <a href="contact-me.html">contact</a> |
         <a href="https://www.resume.com/">resume</a>
     </nav>
-    <img style="float:left; border:5px solid white" src="img/head-shot.jpg" alt="My head shot" width="150">
-    <section style="clear:both">
+    <img id="head-shot" src="img/head-shot.jpg" alt="My head shot" width="150">
+    <section>
       <br />
-      <h2>About</h2>
+      <h2>A bit about me</h2>
       <article>
         <h3>TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt<br />
            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco<br />
@@ -26,14 +27,14 @@
       </article>
       <h2>Projects</h2>
       <h3>Here are some projects I have worked on:</h3>
-      <ul>
-        <li><img src="img/pic1.PNG" alt="My head shot" width="50" style="float:left"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
-        <li style="clear:both"><img src="img/pic2.PNG" alt="My head shot" width="50" style="float:left"><a href="https://github.com/setupshop/hello-world">Hello world</a></li>
+      <ul class="project-list">
+        <li><img src="img/pic1.PNG" alt="First Assignment" width="50"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
+        <li><img src="img/pic2.PNG" alt="Hello world" width="50"><a href="https://github.com/setupshop/hello-world">Hello world</a></li>
 
       </ul>
     </section>
 
-    <footer style="clear:both">
+    <footer>
       <p>Posted by: Gedion Birhane</p>
       <p>Contact information: <a href="mailto:gedion.sami@gmail.com">
         gedion.sami@gmail.com</a>.</p>
