--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Projects</h2>
       <h3>Here are some projects I have worked on:</h3>
       <ul class="project-list">
-        <li><img src="img/pic1.PNG" alt="First Assignment" width="50"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
+        <li><img src="img/icon2.jpg" alt="First Assignment" width="50"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
         <li><img src="img/pic2.PNG" alt="Hello world" width="50"><a href="https://github.com/setupshop/hello-world">Hello world</a></li>
 
       </ul>
