changed image extention to lower case

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h2>Projects</h2>
       <h3>Here are some projects I have worked on:</h3>
       <ul class="project-list">
-        <li><img src="img/black-lion.PNG" alt="First Assignment" width="50"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
-        <li><img src="img/centurian.PNG" alt="Hello world" width="50"><a href="https://github.com/setupshop/hello-world">Hello world</a></li>
+        <li><img src="img/black-lion.png" alt="First Assignment" width="50"><a href="https://github.com/setupshop/first-code">First Assignment</a> </li>
+        <li><img src="img/centurian.png" alt="Hello world" width="50"><a href="https://github.com/setupshop/hello-world">Hello world</a></li>
 
       </ul>
     </section>
