added more css, and used flexbox

--- a/index.html
+++ b/index.html
@@ -4,25 +4,41 @@
     <meta charset="utf-8">
     <title>Portfolio</title>
       <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Portfolio</h1>
-      <h2>Gedion Birhane</h2>
     </header>
     <nav>
         <a href="contact-me.html">contact</a> |
         <a href="https://www.resume.com/">resume</a>
     </nav>
-    <img id="head-shot" src="img/head-shot.jpg" alt="My head shot" width="150">
+
+    <div class="card">
+      <img id="head-shot" src="img/head-shot.jpg" alt="head-shot">
+      <h1>Gedion Birhane</h1>
+      <p class="title">CEO & Founder, GGG limited</p>
+      <p>University of Washinton</p>
+      <div>
+        <a href="#"><i class="fas fa-allergies"></i></a>
+        <a href="#"><i class="fas fa-angry"></i></a>
+        <a href="#"><i class="fas fa-anchor"></i></a>
+        <a href="#"><i class="fas fa-address-card"></i></a>
+     </div>
+     <p><button>Contact</button></p>
+    </div>
+
     <section>
       <br />
       <h2>A bit about me</h2>
-      <article>
-        <h3>TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt<br />
-           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco<br />
-           laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in<br />
-           voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat<br />
+      <article class="container">
+        <h3>TLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+           laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+           voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
       </article>
       <h2>Projects</h2>
