added css for assignment 6

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Portfolio</h1>
     </header>
     <nav>
-        <a href="contact-me.html">contact</a> |
+        <a href="contact-me.html">contact </a>  |
         <a href="https://www.resume.com/">resume</a>
     </nav>
 
@@ -21,7 +21,7 @@
       <img id="head-shot" src="img/head-shot.jpg" alt="head-shot">
       <h1>Gedion Birhane</h1>
       <p class="title">CEO & Founder, GGG limited</p>
-      <p>University of Washinton</p>
+      <p>University of Washington</p>
       <div>
         <a href="#"><i class="fas fa-allergies"></i></a>
         <a href="#"><i class="fas fa-angry"></i></a>
